--- a/Session-23/PetShop.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerController" asp-action="Index">Customer List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customer List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeController" asp-action="Index">Employee List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PetController" asp-action="Index">Pet List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pet" asp-action="Index">Pet List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PetFoodController" asp-action="Index">PetFood List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PetFood" asp-action="Index">PetFood List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TransactionController" asp-action="Index">Transaction List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Index">Transaction List</a>
                         </li>
                     </ul>
                 </div>
