init monthlyledger /petreport

--- a/Session-23/PetShop.Web.Mvc/Views/PetFood/Index.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/PetFood/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PetShop.Model.PetFood>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Pet Foods";
 }
 
 <h1>Pet Foods</h1>
