--- a/Session-23/PetShop.Web.Mvc/Views/Employee/Index.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Employee/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PetShop.Model.Employee>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Employees";
 }
 
 <h1>Employees</h1>
