--- a/Session-23/PetShop.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Index">Transaction List</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MonthlyLedger" asp-action="Index">MonthlyLedger</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PetReport" asp-action="Index">PetReport</a>
+                        </li>
                     </ul>
                 </div>
             </div>
