--- a/Session-23/PetShop.Web.Mvc/Views/Transaction/Index.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Transaction/Index.cshtml
@@ -49,19 +49,19 @@
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Customer.Name)
+                    @Html.DisplayFor(modelItem => item.Customer)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Employee.Name)
+                    @Html.DisplayFor(modelItem => item.Employee)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Pet.Breed)
+                    @Html.DisplayFor(modelItem => item.Pet)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PetPrice)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PetFood.Id)
+                    @Html.DisplayFor(modelItem => item.PetFood)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PetFoodQty)
