--- a/Session-23/PetShop.Web.Mvc/Views/Transaction/Create.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Transaction/Create.cshtml
@@ -13,17 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <label asp-for="CustomerId" class="control-label">Customer Name</label>
+                <select asp-for="CustomerId" class="form-control" asp-items="Model.Customers"></select>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerFullName" class="control-label">Customer Name</label>
-                <select asp-for="CustomerFullName" class="form-control" asp-items="Model.Customers"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeName" class="control-label">Employee Name</label>
-                <select asp-for="EmployeeName" class="form-control" asp-items="Model.Employees"></select>
+                <label asp-for="EmployeeId" class="control-label">Employee Name</label>
+                <select asp-for="EmployeeId" class="form-control" asp-items="Model.Employees"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PetId" class="control-label">Animal Type</label>
