added some business / reports

--- a/Session-23/PetShop.Web.Mvc/Views/Transaction/Index.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Transaction/Index.cshtml
@@ -49,19 +49,19 @@
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Customer)
+                    @Html.DisplayFor(modelItem => item.Customer.FullName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Employee)
+                    @Html.DisplayFor(modelItem => item.Employee.FullName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Pet)
+                    @Html.DisplayFor(modelItem => item.Pet.AnimalBreed)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PetPrice)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PetFood)
+                    @Html.DisplayFor(modelItem => item.PetFood.AnimalType)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PetFoodQty)
