--- a/Session-23/PetShop.Web.Mvc/Views/Transaction/Details.cshtml
+++ b/Session-23/PetShop.Web.Mvc/Views/Transaction/Details.cshtml
@@ -16,6 +16,24 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Date)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CustomerId)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EmployeeId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EmployeeId)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PetId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PetId)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PetPrice)
         </dt>
@@ -28,6 +46,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PetFoodQty)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PetFoodId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PetFoodId)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PetFoodPrice)
         </dt>
@@ -39,31 +63,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TotalPrice)
-        </dd>
- @*       <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Pet)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pet.Breed)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PetFood)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PetFood.Id)
-        </dd>*@
+        </dd>       
     </dl>
 </div>
 <div>
