--- a/Session-30/FuelStation/FuelStation.Blazor/Client/_Imports.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using FuelStation.Blazor.Client
 @using FuelStation.Blazor.Client.Shared
+@using FuelStation.Blazor.Shared
+@using FuelStation.Model;
+@using FuelStation.Model.Enums;
