--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
@@ -65,12 +65,10 @@ else {
         navigationManager.NavigateTo($"employeelist/edit/{employee.Id}");
     }
 
-
-    //works
     private async Task DeleteItem(EmployeeListDto employee) {
         var confirm = await jsRuntime.InvokeAsync<bool>("confirm", "Delete Employee. Are you sure?");
         if (confirm) {
-            var response = await httpClient.DeleteAsync($"engineer/{employee.Id}");
+            var response = await httpClient.DeleteAsync($"employee/{employee.Id}");
             response.EnsureSuccessStatusCode();
             await LoadItemsFromServer();
         }
