--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeEdit.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeEdit.razor
@@ -7,10 +7,10 @@
 
 <h3>Create/Edit Employee</h3>
 
-@*@if (Employee == null) {
+@if (Employee == null) {
     <p>Loading ...</p>
 }
-else {*@
+else {
     <div class="row mt-2">
         <div class="col-md-6">
             <label class="form-label">Name</label>
@@ -25,7 +25,7 @@ else {*@
     </div>
     <div class="row mt-2">
         <div class="col-md-6">
-            <label class="form-label">SalaryPerMonth</label>
+            <label class="form-label">Salary Per Month</label>
             <input class="form-control" @bind="@Employee.SalaryPerMonth" />
         </div>
     </div>
@@ -45,7 +45,7 @@ else {*@
             <button class="btn btn-danger" @onclick="OnCancel">Cancel</button>
         </div>
     </div>
-@*}*@
+}
 
 @code {
     [Parameter] public int? Id { get; set; }
