--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
@@ -17,10 +17,10 @@ else {
             <tr>
                 <th>Name</th>
                 <th>Surname</th>
-                <th>HireDateStart</th>
-                <th>HireDateEnd</th>
-                <th>SalaryPerMonth</th>
-                <th>EmployeeType</th>
+                <th>Hire Date Start</th>
+                <th>Hire Date End</th>
+                <th>Salary Per Month</th>
+                <th>Employee Type</th>
             </tr>
         </thead>
         <tbody>
@@ -75,6 +75,6 @@ else {
     }
 
     private void BackTo() {
-        navigationManager.NavigateTo("manager");
+        navigationManager.NavigateTo("/");
     }
 }
