--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
@@ -75,6 +75,6 @@ else {
     }
 
     private void BackTo() {
-        navigationManager.NavigateTo("/");
+        navigationManager.NavigateTo("/manager");
     }
 }
