--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Item/ItemEdit.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Item/ItemEdit.razor
@@ -15,7 +15,7 @@ else {
     <div class="row mt-2">
         <div class="col-md-6">
             <label class="form-label">Code</label>
-            <input class="form-control" @bind="@Item.Code" />
+            <input class="form-control" @bind="@Item.Code" readonly />
         </div>
     </div>
     <div class="row mt-2">
