--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Customer/CustomerEdit.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Customer/CustomerEdit.razor
@@ -26,7 +26,7 @@ else {
     <div class="row mt-2">
         <div class="col-md-6">
             <label class="form-label">Card Number</label>
-            <input class="form-control" @bind="@Customer.CardNumber" />
+            <input class="form-control" @bind="@Customer.CardNumber" readonly />
         </div>
     </div>    
     <div class="row mt-2">
