CardNumber / Code fixed

--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Customer/CustomerEdit.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Customer/CustomerEdit.razor
@@ -23,12 +23,12 @@ else {
             <input class="form-control" @bind="@Customer.Surname" />
         </div>
     </div>
-    <div class="row mt-2">
+   @* <div class="row mt-2">
         <div class="col-md-6">
             <label class="form-label">Card Number</label>
             <input class="form-control" @bind="@Customer.CardNumber" readonly />
         </div>
-    </div>    
+    </div>*@    
     <div class="row mt-2">
         <div class="col-md-6">
             <button class="btn btn-success" @onclick="OnSave">Save Changes</button>
@@ -70,4 +70,5 @@ else {
         response.EnsureSuccessStatusCode();
         navigationManager.NavigateTo("customerlist");
     }
+   
 }
