--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
@@ -1,4 +1,5 @@
 ﻿@page "/employeelist"
+@using FuelStation.Blazor.Client.Shared.Extra
 @using FuelStation.Blazor.Shared.Employee;
 @inject HttpClient httpClient
 @inject NavigationManager navigationManager
@@ -7,7 +8,7 @@
 <h3>Employee List</h3>
 
 @if (isLoading) {
-    <p>Loading ...</p>
+    <Spinner Type="SpinnerType.Border" />
 }
 else {
     <button class="btn btn-primary" @onclick="CreateItem">Create</button>
