--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Item/ItemList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Item/ItemList.razor
@@ -1,4 +1,5 @@
 ﻿@page "/itemlist"
+@using FuelStation.Blazor.Client.Shared.Extra
 @using FuelStation.Blazor.Shared.Employee;
 @using FuelStation.Blazor.Shared.Item;
 @inject HttpClient httpClient
@@ -8,7 +9,7 @@
 <h3>Item List</h3>
 
 @if (isLoading) {
-    <p>Loading ...</p>
+   <Spinner Type="SpinnerType.Border" />
 }
 else {
     <button class="btn btn-primary" @onclick="CreateItem">Create</button>
